--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,15 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "matplotlib>=3.10.7",
+    "natsort>=8.4.0",
     "numpy>=2.3.5",
     "opencv-python>=4.11.0.86",
     "pillow>=12.0.0",
     "scikit-learn>=1.7.2",
     "tqdm>=4.67.1",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=7.1.0",
 ]
