--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "pillow>=12.0.0",
     "scikit-learn>=1.7.2",
+    "torchvision>=0.24.1",
+    "torchviz>=0.0.3",
     "tqdm>=4.67.1",
+    "wandb>=0.23.1",
 ]
 
 [dependency-groups]
